<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/btnToggleGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_material"
                android:gravity="center"
                app:checkedButton="@+id/btnToggleFree"
                app:layout_constraintTop_toTopOf="parent"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@+id/btnToggleFree"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/free" />

                <Button
                    android:id="@+id/btnTogglePreset"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preset" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/promptContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_material"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnToggleGroup">

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/textInputLayoutGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:constraint_referenced_ids="textInputLayout1,textInputLayout2,textInputLayout3" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_material"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/ic_baseline_portrait_24">

                    <AutoCompleteTextView
                        android:id="@+id/tv_subject"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:inputType="none"
                        android:text="@string/subject"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_material"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
                    app:startIconDrawable="@drawable/ic_baseline_text_snippet_24">

                    <AutoCompleteTextView
                        android:id="@+id/tv_description"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:inputType="none"
                        android:text="@string/description"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_material"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                    app:startIconDrawable="@drawable/ic_baseline_palette_24">

                    <AutoCompleteTextView
                        android:id="@+id/tv_style"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:inputType="none"
                        android:text="@string/style"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/freeTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_material"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPrompt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/what_image_do_you_want_to_generate" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btnGenerateImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_material"
                android:layout_marginTop="@dimen/margin_material"
                android:text="@string/generate_image"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/promptContainer" />

            <FrameLayout
                android:id="@+id/shimmerContainer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_material"
                android:background="@drawable/rectangle_with_border"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnGenerateImage">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottiePainting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_material"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="painting.json"
                    app:lottie_speed="1.5"
                    app:lottie_loop="true" />

                <ImageView
                    android:id="@+id/ivImage"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/ivImagePlaceholder"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_outline_image_24"
                    app:tint="@color/black"
                    tools:ignore="ContentDescription" />

            </FrameLayout>

            <Space
                android:id="@+id/spaceBottom"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                app:layout_constraintTop_toBottomOf="@+id/shimmerContainer" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>